# VisionStream

./: Dockerfile  RDP_algo.py  README.md  client.py  client2.py  config.py  env.example  main.py  pyproject.toml  requirements.txt  server.py
gui/: client.py  main_gui.py  server.py  utils.py
src/: client.py  client2.py  config.py  server.py  server2.py
test/: client.py  server.py
video_stream/: __init__.py  cli.py  client.py  server.py
