[project]
name = "visionstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.0",
    "aiortc>=1.12.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "vidgear>=0.3.3",
]
