[project]
name = "visionstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "aiortc>=1.5.0",
    "msgpack>=1.1.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "websockets>=15.0.1",
]
